--- a/app/about.html
+++ b/app/about.html
@@ -58,16 +58,22 @@
                 <a href="./index.html" class="menu__list-link">Новинки</a>
             </li>
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">Бестселлеры</a>
+                <a href="./product.html" class="menu__list-link">Бестселлеры</a>
             </li>
             <li class="menu__list-item">
-                <a href="#" class="menu__list-link">Авторам</a>
+                <a href="./news-detail.html" class="menu__list-link">Авторам</a>
             </li>
             <li class="menu__list-item">
                 <a href="#" class="menu__list-link">О нас</a>
             </li>
             <li class="menu__list-item">
                 <a href="./news.html" class="menu__list-link">СМИ и блогерам</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="./search.html" class="menu__list-link">Search</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="./card.html" class="menu__list-link">Корзина</a>
             </li>
             </ul>
         </nav>
