--- a/app/news-detail.html
+++ b/app/news-detail.html
@@ -68,6 +68,12 @@
             <li class="menu__list-item">
                 <a href="./news.html" class="menu__list-link">СМИ и блогерам</a>
             </li>
+            <li class="menu__list-item">
+              <a href="./search.html" class="menu__list-link">Search</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="./card.html" class="menu__list-link">Корзина</a>
+            </li>
             </ul>
         </nav>
             <div class="sub-menu__wrapper">
@@ -164,7 +170,7 @@
                 Не исключено, что черновик рукописи оказался бы забыт, и мы никогда не прочли бы «Благих знамений», не вмешайся Терри Пратчетт. Примерно год спустя он позвонил другу и спросил, продолжил ли тот историю. А получив отрицательный ответ, сказал, что знает, как это сделать, и предложил Гейману два варианта. Продать идею Пратчетту, чтобы тот мог развить её самостоятельно, или написать книгу в соавторстве. Какое из предложений выбрать – этим вопросом Гейман даже не стал задаваться. Как он сам говорит, это было всё равно что скульптору получить предложение поработать вместе с Микеланджело. Предложение, от которого просто невозможно было отказаться.
             </div>
 
-            <section class="news-theme card">
+            <div class="news-theme card">
                 <div class="container">
                   <div class="card-top">
                     <h2 class="card__title">Книги по теме</h2>
@@ -289,7 +295,7 @@
                   
                   </div>
                 </div>
-            </section>
+            </div>
         </div>
     </section>
 </main>
