--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,12 @@
               <li class="menu__list-item">
                 <a href="./news.html" class="menu__list-link">СМИ и блогерам</a>
               </li>
+              <li class="menu__list-item">
+                <a href="./search.html" class="menu__list-link">Search</a>
+              </li>
+              <li class="menu__list-item">
+                <a href="./card.html" class="menu__list-link">Корзина</a>
+              </li>
             </ul>
           </nav>
             <div class="sub-menu__wrapper">
